Version 1.92
-------------
Added link to about section to the official guide: https://youtu.be/8EXOeB074Zw

Version 1.91
-------------
Added Thargoid shipwreck POI
Added short range blaster to pulse laser
Added button to add entire loadout to wishlist at once
Added notification on adding loadout to wishist, while there is nothing to add.
- Also prevent creating empty wishlists
Fix sorting of assets on material overview
Correct erroneous barter buy/sell values
Keep order of Asset Types on bartender tab

Version 1.90
-------------
Added new Bartender tab to simulate trading (Work in progress, suggestions appreciated)
Use name of loadout when selecting "Create new" add to wishlist option
Removed some text from the about section
Really fix engineer unlock requirements for Nemo this time
Handle blank name from EDSY

Version 1.89
-------------
Add EDSY Button to Horizons Wishlist to open EDSY website
- To import a wishlist from EDSY go to: OPS > EXPORT > EDOMH on the outfitting screen
Use name from EDSY as wishlist name
Fix engineer unlock requirements for Nemo and Dekker

Version 1.88
-------------
ED Shipyard integration - import wishlist in the app through the click of a button on edsy.org (pending implementation)
Added material statistics best average collected per visit
- requires minimum of 10 visits for settlements to be considered. (5 for Colonia)

Version 1.87
-------------
Loadout cloning - Clones an entire loadout you defined
Current loadout - Show a read-only version of your current loadout selected in-game, which can be cloned
Loadout add to wishlist - Option to add a loadout item to a new wishlist
Fix loadout create/rename button texts

Version 1.86
-------------
Alternate journal monitoring method for network shares(Optional Setting)
Added Unclassified Relic Commodity
Fix notification on CAPI connect

Version 1.85
-------------
New read-only aggregated wishlists for Horizons and Odyssey

Version 1.84
-------------