@@ -1898,7 +1898,6 @@ notification.trade.you.accepted.a.bid,You accepted a bid.,You accepted a bid.,Si
 notification.trade.you.received.a.bid.on.an.offer,You received a bid on an offer.,You received a bid on an offer.,Sie haben ein Gebot für ein Angebot erhalten.,Recibiste una oferta por una oferta.,Vous avez reçu une enchère sur une offre.,Você recebeu um lance em uma oferta.,Вы получили ставку на предложение.
 notification.trade.your.bid.has.been.accepted,Your bid has been accepted.,Your bid has been accepted.,Ihr Gebot wurde angenommen.,Su oferta ha sido aceptada.,Votre offre a été acceptée.,Seu lance foi aceito.,Ваша ставка принята.
 notification.trade.your.bid.has.been.rejected,Your bid has been rejected.,Your bid has been rejected.,Ihr Gebot wurde abgelehnt.,Su oferta ha sido rechazada.,Votre offre a été rejetée.,Seu lance foi rejeitado.,Ваша ставка отклонена.
-notification.trade.your.bid.is.placed,Your bid is placed.,Your bid is placed.,Ihr Gebot wurde abgegeben.,Se ha realizado tu oferta.,Votre offre est placée.,Seu lance foi colocado.,Ваша ставка размещена.
 notification.trade.your.bid.was.pulled,Your bid was pulled.,Your bid was pulled.,Ihr Gebot wurde zurückgezogen.,Su oferta fue retirada.,Votre offre a été retirée.,Seu lance foi retirado.,Ваша ставка была снята.
 search.filter.all,All (default),All (default),Alle (Standard),Todo (predeterminado),Tous (par défaut),All (padrão),Все (по умолчанию)
 search.filter.all_engineer,All engineer unlocking,All engineer unlocking,Alle Ingenieure werden freigeschaltet,Desbloqueo de todos los ingenieros,Déverrouillage de tous les ingénieurs,Desbloqueio de todos os engenheiros,Разблокировка всех инженеров
@@ -2245,3 +2244,11 @@ tab.bartender.total.receive,Units to receive,Units to receive,Einheiten zu erhal
 blueprint.add.all.to.wishlist,Add all to wishlist,Add all to wishlist,Fügen Sie alle zur Wunschliste hinzu,Agregar todo a la lista de deseos,Ajouter tout à WishList,Adicione tudo à lista de desejos,Добавьте все в список желаний
 menu.about.tutorial,Official video howto guide,Official video howto guide,Offizielles Video Howto Guide,Video oficial Cómo guía,Vidéo officielle How to Guide,Guia oficial de vídeo como,Официальное видео руководство
 search.filter.not_on_wishlist,Not or more than on wishlist,Not or more than on wishlist,Nicht oder mehr als auf der Wunschliste,No o más que en la lista de deseos,Pas ou plus que sur la liste de souhaits,Não ou mais do que na lista de desejos,"Не или больше, чем в списке желаний"
+tab.wishlist.selected.blueprints.hint.white.horizons.explain,- This blueprint can''t be crafted. Collect or trade the required materials.,- This blueprint can''t be crafted. Collect or trade the required materials.,- Diese Blaupause kann nicht gestaltet werden. Sammeln oder handeln Sie die erforderlichen Materialien.,- Este plan no puede ser elaborado. Recoger o intercambiar los materiales requeridos.,- Ce plan ne peut pas être fabriqué. Collecter ou échanger les matériaux requis.,- Este plano não pode ser criado. Coletar ou negociar os materiais necessários.,- Этот план не может быть изготовлен. Собирать или обменивать необходимые материалы.
+notification.trade.your.bid.is.placed,Your bid is placed. (Auto rejects in 1 minute),Your bid is placed. (Auto rejects in 1 minute),Ihr Gebot ist abgegeben. (Auto lehnt in 1 Minute ab),Su oferta se realiza. (Auto rechaza en 1 minuto),Votre offre est placée. (Auto rejette en 1 minute),Sua oferta é feita. (Rejeita automaticamente em 1 minuto),Ваша ставка размещена. (Авто отвергает через 1 минуту)
+tab.wishlist.material.hint.red,Red,Red,Rot,Rojo,Rouge,Vermelho,Красный
+tab.wishlist.material.hint.red.explain,You need to collect or trade this material,You need to collect or trade this material,Sie müssen dieses Material sammeln oder handeln,Necesita recolectar o cambiar este material,Vous devez collecter ou échanger ce matériel,Você precisa coletar ou negociar este material,Вам нужно собрать или обменять этот материал
+tab.wishlist.material.hint.yellow,Yellow,Yellow,Gelb,Amarillo,Jaune,Amarelo,Желтый
+tab.wishlist.material.hint.yellow.explain,"You own enough of this material, but you need to collect some from your fleetcarrier","You own enough of this material, but you need to collect some from your fleetcarrier","Sie besitzen genug von diesem Material, aber Sie müssen einige von Ihrem FleetCarrier sammeln","Usted posee lo suficiente de este material, pero debe recolectar algunos de su FleetCarrier","Vous possédez suffisamment de ce matériel, mais vous devez en collecter quelques-uns de votre fleetcarrier","Você possui o suficiente desse material, mas precisa coletar alguns do seu FleetCarrier","У вас есть достаточно этого материала, но вам нужно собрать некоторые из своего Fleetcarrier"
+tab.wishlist.material.hint.green,Green,Green,Grün,Verde,Vert,Verde,Зеленый
+tab.wishlist.material.hint.green.explain,You have the required amount of this material,You have the required amount of this material,Sie haben die erforderliche Menge dieses Materials,Tiene la cantidad requerida de este material,Vous avez le montant requis de ce matériel,Você tem a quantidade necessária deste material,У вас есть необходимое количество этого материала
