@@ -1,2 +1,2 @@
 org.gradle.parallel=true
-version=1.91
+version=1.92
